<resources>
    <string name="app_name">HTML5魔塔安卓版</string>

    <string name="about_recommend">HTML5魔塔官方安卓客户端</string>
    <string name="about_version">版本号</string>
    <string name="about_time">最后更新日期</string>
    <string name="about_dev_name">开发者</string>
    <string name="about_dev_value">艾之葵</string>
    <string name="about_team_name">运营团队</string>
    <string name="about_team_value">HTML5网站组</string>
    <string name="about_url">官方网站</string>
    <string name="about_url_value">h5mota.com</string>
    <string name="about_contact">联系我们</string>
    <string name="about_ckcz123">1149537447</string>
    <string name="about_copyright">Copyright &#169; 2020. h5mota.com</string>
    <string name="about_rights">All rights reserved.</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="bbs_bottom_top">最近热点</string>
    <string name="bbs_bottom_allboards">所有版面</string>
    <string name="bbs_bottom_search">搜索帖子</string>
    <string name="bbs_bottom_settings">设置</string>
    <string name="query_bbs_boards">搜索版面&#8230;</string>
    <string name="bbs_boards_all">所有版面</string>
    <string name="bbs_boards_favorite">收藏版面</string>
    <string name="bbs_username">用户编号（如1000）</string>
    <string name="bbs_postpage_title">请输入标题</string>
    <string name="bbs_postpage_text">请输入内容</string>
    <string name="bbs_postpage_anonymous">匿名</string>
    <string name="bbs_postpage_post">发表</string>
    <string name="bbs_search">搜索</string>
    <string name="bbs_search_board">搜索版面</string>
    <string name="bbs_search_text_hint">多个关键词请用空格分开</string>
    <string name="bbs_post_mail_author">收件人</string>
    <string name="settings_title_username">账户管理</string>
    <string name="settings_title_me">个人中心</string>
    <string name="settings_title_settings">模块设置</string>
    <string name="settings_autologin">自动登录</string>
    <string name="settings_picture">图片显示</string>
    <string name="settings_clearcache">清除缓存</string>
    <string name="settings_about">关于本软件</string>
    <string name="settings_faq">常见FAQ</string>
    <string name="settings_report">意见反馈</string>
    <string name="settings_update">检查更新</string>
    <string name="settings_title_about">关于</string>
    <string name="settings_source">获取源代码</string>
    <string name="settings_download_maker">下载造塔器</string>
    <string name="settings_share">推荐给好友</string>
    <string name="settings_source_hint">即将跳转到github&#8230;。</string>
    <string name="settings_favorite">收藏的主题帖</string>
    <string name="postsig">使用签名档：</string>
    <string name="sig1">1</string>
    <string name="sig2">2</string>
    <string name="sig3">3</string>
    <string name="sig0">无</string>
    <string name="bbs_search_author_hint">作者（选填）</string>

</resources>
