<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e8e8e7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/bbs_search_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:textSize="14sp"
                />

            <Spinner
                android:id="@+id/bbs_search_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/bbs_search_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:textSize="14sp"
                android:singleLine="true"
                android:maxLength="15"
                android:hint="@string/bbs_search_author_hint"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/bbs_search_text"
                android:layout_width="wrap_content"
                android:layout_weight=".73"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:singleLine="true"
                android:maxLength="22"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:hint="@string/bbs_search_text_hint"
                android:layout_marginBottom="6dp"
                />

            <Button
                android:id="@+id/bbs_search_confirm"
                android:layout_weight=".25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bbs_search"
                android:textSize="14sp"
                style="?android:attr/buttonBarButtonStyle"
                />

        </LinearLayout>


    </LinearLayout>


    <ListView
        android:id="@+id/bbs_search_listview"
        android:divider="#e1e1e1"
        android:background="#ffffff"
        android:dividerHeight="1dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
    </ListView>

</LinearLayout>