<ScrollView
    android:id="@+id/settings_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".bbs.BBSActivity"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="7dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/settings_title_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/settings_title_username"
                android:textColor="#aaaaaa"
                android:textSize="13sp"
                />

            <TableLayout
                android:id="@+id/settings_table_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_title_username"
                android:layout_marginTop="8dp"
                android:background="@drawable/corners_bg">

                <TextView
                    android:layout_width="fill_parent"
                    android:id="@+id/settings_username"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />

                <View
                    android:layout_height="1dip"
                    android:layout_width="fill_parent"
                    android:background="#e8e8e7"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:id="@+id/settings_favorite"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/settings_favorite"
                    />

            </TableLayout>
        </RelativeLayout>
<!--
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/settings_title_settings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/settings_title_settings"
                android:textColor="#aaaaaa"
                android:textSize="13sp"
                />

            <TableLayout
                android:id="@+id/settings_table_settings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_title_settings"
                android:layout_marginTop="8dp"
                android:background="@drawable/corners_bg">

                <TableRow
                    android:id="@+id/settings_autologin"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/settings_autologin"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Switch
                        android:id="@+id/settings_switch_autologin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </TableRow>


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e8e8e7"/>


                <TableRow
                    android:id="@+id/settings_picture"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/settings_picture"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Switch
                        android:id="@+id/settings_switch_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e8e8e7"/>

                <TextView
                    android:id="@+id/settings_clearcache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/settings_clearcache"
                    android:textSize="15sp"
                    />

            </TableLayout>
        </RelativeLayout>
-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/settings_title_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/settings_title_about"
                android:textColor="#aaaaaa"
                android:textSize="13sp"
                />

            <TableLayout
                android:id="@+id/settings_table_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_title_about"
                android:layout_marginTop="8dp"
                android:background="@drawable/corners_bg">
<!--
                <TextView
                    android:id="@+id/settings_faq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/settings_faq"
                    android:textSize="15sp"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e8e8e7"/>
-->
                <TextView
                    android:id="@+id/settings_download_maker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/settings_download_maker"
                    android:textSize="15sp"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e8e8e7"/>

                <TextView
                    android:id="@+id/settings_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/settings_report"
                    android:textSize="15sp"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e8e8e7"/>


                <TextView
                    android:id="@+id/settings_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/settings_about"
                    android:textSize="15sp"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e8e8e7"/>

                <TextView
                    android:id="@+id/settings_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/settings_share"
                    android:textSize="15sp"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e8e8e7"/>

                <TextView
                    android:id="@+id/settings_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/settings_source"
                    android:textSize="15sp"
                    />
<!--
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#e8e8e7"/>

                <TableRow
                    android:id="@+id/settings_tablerow_update"
                    android:layout_width="fill_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/settings_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/settings_update"
                        android:textSize="15sp"
                        />
                </TableRow>
                -->
            </TableLayout>

        </RelativeLayout>


    </LinearLayout>
</ScrollView>